--- a/index.html
+++ b/index.html
@@ -880,9 +880,8 @@
   type="number" 
   class="form-control rounded-pill px-4 py-2" 
   placeholder="ZIP" 
-  min="10000" 
-  max="99999" 
-  oninput="if(this.value.length > 5) this.value = this.value.slice(0,5);" 
+  pattern="[0-9]{10}"
+    maxlength="5" 
   required
 />
         </div>
@@ -891,9 +890,8 @@
   type="tel" 
   class="form-control rounded-pill px-4 py-2" 
   placeholder="Phone" 
-  pattern="\d{10}" 
-  maxlength="10" 
-  oninput="this.value = this.value.replace(/\D/g, '').slice(0,10);" 
+  pattern="[0-9]{10}"
+    maxlength="10" 
   required
 />        </div>
         <div class="col-md-12">
